[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
axum = "0.8.3"
http-body-util = "0.1.3"
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.9.0"

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
